SUBDIRS =					\
	alg_3_2_1_1.test			\
	alg_3_2_1_2.test			\
	alg_3_2_2.test				\
	alg_3_2_3.test				\
	alg_3_2_4.test				\
	alg_3_2_5.test				\
	arrow_over_12.test			\
	arrow_under_12.test			\
	bana_2_1.test				\
	bana_5_1.test				\
	bana_5_2.test				\
	bana_5_3.test				\
	bana_5_4.test				\
	bana_5_5.test				\
	bana_5a_1.test				\
	bana_5a_1_baseline.test			\
	bana_5a_2.test				\
	bana_5a_2_mtext.test			\
	bana_5a_3.test				\
	bana_6_1.test				\
	bar_12_2_1.test				\
	bar_12_2_2.test				\
	bar_menclose_12_1_2.test		\
	bar_over_12_1_1.test			\
	bar_under_12_1_2.test			\
	binomial_14_3_3_2.test			\
	bold_2_7_1.test				\
	bold_2_7_2.test				\
	bold_2_7_3.test				\
	cap_1_6_1.test				\
	cap_1_6_1_separate.test			\
	cap_1_6_2.test				\
	cap_1_6_4.test				\
	chem_16_2_10.test			\
	chem_16_2_11.test			\
	chem_16_2_13.test			\
	chem_16_2_8.test			\
	chem_16_2_9.test			\
	contractions_1.test			\
	contractions_2.test			\
	contractions_3.test			\
	contractions_4.test			\
	contractions_5.test			\
	dot_12_1_4.test				\
	dot_12_1_5.test				\
	dot_12_1_6_double.test			\
	dot_12_1_6_single.test			\
	example_11_5_1_2.test			\
	example_11_5_1_3.test			\
	example_11_5_1_4.test			\
	example_11_5_2.test			\
	example_11_5_3.test			\
	example_11_5_4.test			\
	example_11_5_5_2.test			\
	example_11_5_5_3.test			\
	example_11_5_6.test			\
	example_11_6.test			\
	example_11_6_math_variant.test		\
	example_3_4_1.test			\
	example_3_4_2.test			\
	expr_3_1_1.test				\
	expr_3_1_10.test			\
	expr_3_1_2.test				\
	expr_3_1_3.test				\
	expr_3_1_6.test				\
	expr_3_1_7.test				\
	expr_3_1_8.test				\
	expr_3_1_9.test				\
	expr_3_1_9_wiris.test			\
	fraction_6_1_1.test			\
	fraction_6_1_2.test			\
	fraction_6_2_1.test			\
	fraction_6_2_2.test			\
	fraction_6_2_2_unicode_frac.test	\
	fraction_6_3_1.test			\
	fraction_6_4_1.test			\
	fraction_6_4_2.test			\
	fraction_6_4_3.test			\
	fraction_6_4_4.test			\
	fraction_6_4_5.test			\
	fraction_6_4_6.test			\
	grade1_1_7_1.test			\
	grade1_1_7_2.test			\
	grade1_1_7_3_1.test			\
	grade1_1_7_3_2.test			\
	grade1_1_7_4.test			\
	hat_12_1_7.test				\
	lim_7_9_2.test				\
	msub_7_4_3.test				\
	msubsup_7_7_1.test			\
	msubsup_7_7_2.test			\
	msup_7_3_11.test			\
	msup_7_3_2.test				\
	msup_7_3_3.test				\
	msup_7_3_4.test				\
	msup_7_3_6.test				\
	msup_7_3_7.test				\
	msup_7_4_1.test				\
	msup_7_4_2.test				\
	msup_7_5_1.test				\
	msup_7_5_3.test				\
	msup_7_6_2.test				\
	number_2_1_2.test			\
	number_2_1_3.test			\
	number_2_2_1.test			\
	number_2_2_2.test			\
	number_2_2_3.test			\
	number_space_after.test			\
	number_space_before.test		\
	number_space_before_and_after.test	\
	pre_msubsup_7_8_1.test			\
	pre_sup_7_8_2.test			\
	ratio_3_1_11.test			\
	ratio_3_1_12.test			\
	ratio_3_2_6.test			\
	roman_numeral_2_6_1.test		\
	roman_numeral_2_6_2.test		\
	roman_numeral_2_6_3.test		\
	root_8_2_1.test				\
	root_8_2_2.test				\
	root_8_2_3.test				\
	root_8_2_4.test				\
	root_letter_base.test			\
	set_10_1.test				\
	set_10_3.test				\
	set_10_4.test				\
	set_10_5.test				\
	set_10_6.test				\
	shape_14_1_1_1.test			\
	shape_14_1_2_1.test			\
	shape_14_1_2_2.test			\
	signs_2_10_16.test			\
	signs_2_10_2.test			\
	signs_2_10_5.test			\
	signs_2_10_8.test			\
	spacing_9_3_1_1.test			\
	spacing_9_3_1_2.test			\
	spacing_9_3_1_3.test			\
	spacing_9_3_2_1.test			\
	spacing_9_3_2_2.test			\
	spacing_9_3_2_3.test			\
	spacing_9_3_2_4.test			\
	spacing_9_3_2_5.test			\
	spacing_9_3_3_1.test			\
	spacing_9_3_3_2.test			\
	spacing_9_3_3_3.test			\
	spacing_9_3_3_4.test			\
	spacing_9_3_3_5.test			\
	spacing_9_3_3_6.test			\
	sqrt_8_1_1.test				\
	sqrt_8_1_2.test				\
	sqrt_8_1_3.test				\
	sqrt_8_1_4.test				\
	stat_9_7_2.test				\
	sum_7_9_1.test				\
	text_9_7_1.test				\
	text_9_7_1_mtext.test			\
	time_2_4_1.test

EXTRA_DIST =			\
	run-ueb-tests.sh	\
	README.txt
